--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,7 +2,11 @@ body{
   margin: 0;
   padding: 0;
   justify-content: center;
-  align-items: center;}
+  align-items: center;
+  height: 100vh;
+  background-color:#121212;
+  color: white;
+}
   /* App.css */
 
 
@@ -32,4 +36,42 @@ table tr{
   border-top: 1px solid #1867e6; /* Apply top border to table rows */
   border-bottom: 1px solid #1867e6;
   text-align: center;
+}
+
+
+.formContainer{
+  max-width: 500px;
+  margin:auto;
+  padding:20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color:#f2f2f2;
+  color:#121212 ;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+.fromWrapper{
+  display: inline-block;
+}
+
+.formContainer input[type="text"]{
+  width:95%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border:none;
+  border-radius: 5px;
+  background-color: #c5c4c4;
+  font-size: 16px;
+}
+
+.formContainer button{
+  width:100%;
+  padding: 10px;
+  margin-bottom: 15px;
+  border:none;
+  border-radius: 5px;
+  color: white;
+  background-color: #1c18ff;
+  font-size: 16px;
 }
